--- a/certamen_2025-2.ipynb
+++ b/certamen_2025-2.ipynb
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "j8wqhhbnidp",
    "metadata": {},
    "outputs": [
@@ -528,7 +528,7 @@
     "plt.tight_layout()\n",
     "plt.show()\n",
     "\n",
-    "print(\"✓ Funciones de pertenencia de salida visualizadas\")"
+    "print(\" Funciones de pertenencia de salida visualizadas\")"
    ]
   },
   {
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "1a2p9s6al7p",
    "metadata": {},
    "outputs": [
@@ -771,7 +771,7 @@
     "rule42 = ctrl.Rule(distance_error['Too_Far'], \n",
     "                   (throttle['High'], brake['None']))\n",
     "\n",
-    "print(\"✓ 42 reglas difusas definidas correctamente\")"
+    "print(\" 42 reglas difusas definidas correctamente\")"
    ]
   },
   {
